--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -31,6 +32,7 @@
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   }
 }
