--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/react-query": "^5.74.11",
+    "antd": "^5.24.9",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
