--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/postcss": "^4.1.5",
     "@tanstack/react-query": "^5.74.11",
+    "@tanstack/react-query-devtools": "^5.75.0",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
