--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.74.11",
     "@tanstack/react-query-devtools": "^5.75.0",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
